--- a/assets/scss/base/_variable.scss
+++ b/assets/scss/base/_variable.scss
@@ -12,3 +12,14 @@ $h4-font-size: $font-size-base * 1.5; // 24px
 $h5-font-size: $font-size-base * 1.25; // 20px
 $h6-font-size: $font-size-base; // 16px
 $font-size-sm: $font-size-base * 0.875; // 14px
+
+$spacer: 1rem;
+$spacers: (
+  0: 0,
+  1: $spacer * .25,
+  2: $spacer * .5,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 3,
+  6: $spacer * 2,
+);
