--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -38,7 +38,7 @@ img{
 
 .nav{
   position: fixed;
-  min-width: 200px;
+  min-width: 296px;
   min-height: 100vh;
 
 }
@@ -62,6 +62,9 @@ img{
   background-color: #f8f9fa;
   border: 1px solid #dee2e6;
 }
+.p-32{
+  padding: 32px;
+}
 .expand_more {
   display: none;
 }
@@ -74,4 +77,19 @@ img{
 
 .collapsed .expand_less {
   display: none;
+}
+
+.w-40{
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+}
+.border-radius-100{
+  border-radius:100px;
+}
+.fz-16{
+  font-size: 16px;
+}
+.fz-14{
+  font-size: 14px;
 }
